Fix project cards on smaller screens

--- a/src/components/CardItem/CardItem.scss
+++ b/src/components/CardItem/CardItem.scss
@@ -6,17 +6,16 @@
   background: #fff;
   max-width: 250px;
   min-width: 250px;
-  
 }
 
-.cards__container { 
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+.cards__container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .cards__item__link {
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
   width: 100%;
   box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
   -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
@@ -61,10 +60,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
   }
-
 }
-
-
 
 @media only screen and (max-width: 1024px) {
   .cards__item {
@@ -99,3 +95,4 @@
   font-size: 18px;
   line-height: 24px;
 }
+
