--- a/src/components/Cards/Cards.scss
+++ b/src/components/Cards/Cards.scss
@@ -1,9 +1,14 @@
+.cards__items {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
 .cards {
-  padding: 2rem;
+  padding: 1rem;
   background: #1a181b;
   max-width: 100vw;
+  min-width: 100vw;
   min-height: 85vh;
-  
 }
 
 h1 {
@@ -15,20 +20,18 @@ h1 {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  max-width: 1000px;
-  max-height: 1000px;
+  max-width: 1200px;
+  max-height: 1200px;
   align-items: center;
   justify-content: center;
   margin: 0 auto;
-
 }
 
 .cards__wrapper {
-
   // display: grid;
   // grid-template-columns: repeat(4, 1fr);
   // position: relative;
-  margin: 20px 0 25px;
+  margin: 20px 50px 20px 50px;
   max-width: 100%;
 }
 
@@ -68,4 +71,27 @@ h1 {
 .fade-img {
   animation-name: fade-img;
   animation-duration: 2s;
+}
+
+@media (max-width: 1024px) {
+  .cards__items {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 810px) {
+  .cards__items {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 640px) {
+  .cards {
+    min-width: 120vw;
+  }
+  .cards__items {
+    display: flex;
+    flex-direction: column;
+  }
+  
 }
